# menu

./: .env.sample  .envrc  .gitignore  .prettierignore  .pyre_configuration  Procfile  README.md  app.py  cli.py  config.py  constants.py  flake.nix  jobs.py  menu.py  package.json  pyproject.toml  requirements.txt  utils.py  webpack.config.js
.github/workflows/: ci.yaml
frontend/: SomePage.js
menu/: __init__.py  models.py  recipes.py
menu/tests/: test_all_recipes.py  test_planner.py  test_resolver.py
recipes/: Alfredo Fusilli.cook  Bagel with egg.cook  Brats.cook  Bread + cheese + olives.cook  Burgers.cook  Carne de Panela.cook  Chickpea marsala.cook  Chickpea salad.cook  Curry.cook  Esfiha.cook  Farro salad.cook  Gnocchi with pumpkin.cook  Guinness Stew.cook  Kibe.cook  Lasagna.cook  Lentil dahl.cook  Lentil shepherd pie.cook  Lentils with rice.cook  Madalena.cook  Mediterranean salad.cook  Mushroom Risotto.cook  Omelet.cook  Pasta al Funghi.cook  Pasta primavera.cook  Pea soup.cook  Pierogi.cook  Pita bread with baharat cauliflower.cook  Pizza.cook  Quiche.cook  Quinoa bowls.cook  Ravioli.cook  Rice and beans.cook  Roasted sweet potatoes.cook  Roasted veggies + tenderloin.cook  Savory pancakes.cook  Shakshuka.cook  Soylent.cook  Stuffed bell peppers.cook  Tacos.cook  Torta salgada.cook  (+4 more)
static/: style.css
templates/: base.html.jinja  index.html.jinja  recipe.html.jinja
