[tool.poetry]
name = "menu"
version = "0.1.0"
description = ""
authors = ["Luiz Ribeiro <luizribeiro@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
APScheduler = "^3.8.0"
pyre-extensions = "^0.0.22"
Flask-Caching = "^1.10.1"
cooklang = {git = "https://github.com/luizribeiro/py-cooklang.git", rev = "main"}
click = "^8.0.3"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]
honcho = "^1.0.1"
black = "^21.9b0"
pyre-check = "^0.9.6"
flake8 = "^4.0.1"
green = "^3.3.0"
freezegun = "^1.1.0"
pyexpect = "^1.0.21"
python-lsp-server = "^1.2.4"

[tool.poetry.scripts]
menu = 'cli:menu'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
